# playground-rust-api

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: main.rs
src/hello_world/: html.rs  json.rs  mod.rs  routes.rs  text.rs
