[package]
name = "playground-rust-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5.3"
serde = { version = "1.0.228", features = ["derive"] }
http-body-util = "0.1.3"
serde_json = "1.0.149"
mime = "0.3.17"
hyper-util = { version = "0.1.20", features = ["client", "client-legacy"] }
